--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
 version: '3'
 services:
     express_node:
+        container_name: express_node
         build: .
         ports:
             - "8083:8083"
         environment: 
+            - PORT=8083
             - HOST=mongo_node
+            - MONGO_PORT=27017
     mongo_node:
+        container_name: mongo_node
         image: "mongo"
         volumes:
             - ./mongo-volume:/data/db
